# kaggle-netflix-dataset

./: README.md  test_setup.py
netflix-ml-analysis/: .gitignore  pyproject.toml  requirements.txt  setup.py
netflix-ml-analysis/src/: __init__.py  config.py  data_loader.py  preprocessing.py  test.py  train.py
src/: config.py  data_loader.py  test.py  train.py
