[tool.poetry]
name = "netflix-ml-analysis"
version = "0.1.0"
description = "Machine Learning analysis of Netflix streaming data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"
pandas = "^2.3.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.0"
scikit-learn = "^1.7.2"
torch = "^2.5.1"
torchvision = "^0.20.1"
jupyter = "^1.0.0"
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"